# 2022-ntc-content

./: .gitignore  README.md
.github/workflows/: ci.yml
blogs/: README.md
events/: README.md
videos/: README.md
webinars/: README.md
webinars/batfish-routing/: README.md  pyproject.toml  tasks.py
webinars/batfish-routing/.github/workflows/: ci.yml
webinars/batfish-routing/config_gen/: ansible.cfg  inventory.yml  pb_generate_configs.yml
webinars/batfish-routing/config_gen/configs/: sw-2.cfg
webinars/batfish-routing/config_gen/data/configs/: edge-1.cfg  edge-2.cfg  isp-0.cfg  sw-1.cfg
webinars/batfish-routing/config_gen/host_vars/: edge-1.yml  edge-2.yml  isp-0.yml
webinars/batfish-routing/config_gen/templates/: edge-1.j2  edge-2.j2  isp-0.j2
webinars/batfish-routing/config_gen/tests/: test_routing.py
webinars/batfish-routing/development/: Dockerfile  docker-compose.yml
webinars/batfish-security/: README.md  docker-compose.yml  pyproject.toml
webinars/batfish-security/batfish_results/: undefined_references.html  unreachable_lines.html  unused_structures.html
webinars/batfish-security/data/configs/: asa.cfg  cisco_rtr.cfg  cisco_rtr2.cfg  junos-fw.cfg  pan.cfg
webinars/batfish-security/security_checks/: batfish_analysis.py
webinars/nautobot-jobs/: 00-netmiko-assign-vlan-to-interface.py  00-netmiko-script-verify-hostname.py  01-netmiko-assign-vlan-to-interface.py  README.md  local.env  pyproject.toml
webinars/nautobot-jobs/jobs/: 01-netmiko-nautobot-job-verify-hostname.py  02-netmiko-nautobot-job-verify-hostname.py  03-netmiko-nautobot-job-verify-hostname-site-selection.py  04-netmiko-nautobot-job-assign-vlan-to-interface.py  05-create-pop-in-nautobot.py
webinars/panorama-ssot/: GETTING_STARTED.md  LICENSE  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
webinars/panorama-ssot/development/: Dockerfile  creds.example.env  development.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.postgres.yml  nautobot_config.py
webinars/panorama-ssot/docs/: index.md
webinars/panorama-ssot/nautobot_ssot_panorama/: __init__.py  filters.py  forms.py  homepage.py  jobs.py  models.py  navigation.py  signals.py  tables.py  template_content.py  urls.py  views.py
webinars/panorama-ssot/nautobot_ssot_panorama/api/: __init__.py  serializers.py  urls.py  views.py
webinars/panorama-ssot/nautobot_ssot_panorama/diffsync/adapters/: nautobot.py  panorama.py
webinars/panorama-ssot/nautobot_ssot_panorama/diffsync/models/: base.py  nautobot.py  panorama.py
webinars/panorama-ssot/nautobot_ssot_panorama/migrations/: 0001_initial.py
webinars/panorama-ssot/nautobot_ssot_panorama/templates/nautobot_ssot_panorama/: controlplanesystem_retrieve.html  device_logical_groups.html  device_virtual_systems.html
webinars/panorama-ssot/nautobot_ssot_panorama/templatetags/: tree_helpers.py
webinars/panorama-ssot/nautobot_ssot_panorama/tests/: __init__.py  test_api.py  test_basic.py  test_panorama_adapter.py
webinars/panorama-ssot/nautobot_ssot_panorama/utils/: __init__.py  nautobot.py
webinars/panorama-ssot/nautobot_ssot_panorama/utils/panorama/: __init__.py  address.py  application.py  base.py  device_group.py  firewall.py  policy.py  service.py  user.py
