[tool.poetry]
name = "nautobot-jobs-webinar"
version = "0.1.0"
description = ""
authors = ["Network to Code, LLC", "<opensource@networktocode.com>"]

[tool.black]
line-length = 79
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry.dependencies]
python = "^3.8"
pynautobot = "1.2.0"
rich = "12.6.0"
netmiko = "4.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
yamllint = "^1.24.2"
black = "^19.10b0"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
